fix: increase z-index for modal

--- a/src/containers/Modal.module.scss
+++ b/src/containers/Modal.module.scss
@@ -8,6 +8,7 @@
 
 .overlay {
   @include flex;
+  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
